# LRP

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ci-feedback-loop.md  frame-format.md  mvp.md  protocol.md  relay-algorithm.md  relay-networking-research-summary.md  roadmap.md
examples/simulated_three_nodes/: main.c
include/: lrp.h  lrp_dedup.h  lrp_frame.h  lrp_port.h  lrp_radio.h  lrp_router.h  lrp_type.h
samples/mvp_basic_usage/: main.c
src/: lrp.c  lrp_dedup.c  lrp_frame.c  lrp_port_stub.c  lrp_radio.c  lrp_router.c
tests/: test_dedup.c  test_frame.c  test_radio_port.c  test_router.c
